# lern

./: .gitignore  Cargo.toml  README.md  frequency.txt
db/: database.db-shm  database.db-wal
src/: error.rs  main.rs
src/database/: dictionary.rs  frequency.rs  mod.rs  queue.rs  schedule.rs
src/dictionary/: entry.rs  lemmatize.rs  mod.rs
src/fsrs/: card.rs  constants.rs  mod.rs
src/gui/: add.rs  lemmatize.rs  main.rs  mod.rs
