[package]
name = "lern"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
regex = "1.10.5"
rfd = "0.14.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-rusqlite = "0.5.1"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
#rev = "950bfc07d4b71016bf3e9d53709395e185420cec"
features = ["tokio"]

[dependencies.iced_aw]
#path = "./iced_aw/"
git = "https://github.com/iced-rs/iced_aw.git"
rev = "e5f12e1ac432607f9233203a77ed261f369e9168"
default-features = false
features = ["tabs"]
